Fixed the main menu floating up on small screens

--- a/Duplicati/Server/webroot/ngax/less/style.less
+++ b/Duplicati/Server/webroot/ngax/less/style.less
@@ -2153,7 +2153,7 @@ div.modal-dialog {
 
                 .mainmenu {
                     display: none;
-                    position: absolute;
+                    position: fixed;
                     background: none repeat scroll 0 0 white;
                     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
                     left: 10px;
